--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -5,5 +5,5 @@ clean:
 	rm -r dist/*
 
 post:
-	hugo new posts/$(POST_TITLE).md
 	hugo new posts/$(POST_NAME).md
+	echo '# $(POST_TITLE)' >> ./content/posts/$(POST_NAME).md
