--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -6,6 +6,5 @@ clean:
 
 post:
 	hugo new posts/$(POST_NAME).md
-	sed -e 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
+	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
-################################
