--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -15,7 +15,6 @@ jobs:
       - name: checkout the repository
         uses: actions/checkout@v3
       - name: create neww workflow
-        run: |
-          git clone https://github.com/luciel53/holbertonschool-validation.git
+        run:
           cd module3_task0
           make help
