update .github workflow

--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -2,11 +2,11 @@ name: module3_task0
 on:
   schedule:
   # workflow triggered each day
-    - cron: '30 5, 17 * * *'
+    - cron: '30 5 * * *'
   push:
   # trigger each push event
     branches:
-      - master
+      - main
 
 jobs:
   module3_task0:
@@ -14,7 +14,8 @@ jobs:
     steps:
       - name: checkout the repository
         uses: actions/checkout@v3
-      - name: create neww workflow
-        run:
+      - name: create new workflow
+        run: |
+          git clone https://github.com/luciel53/holbertonschool-validation.git
           cd module3_task0
           make help
