--- a/.github/workflows/module3_task0 .yml
+++ b/.github/workflows/module3_task0 .yml
@@ -1,4 +1,4 @@
-name: module3_task0
+name: module3_task1
 on:
   schedule:
   # workflow triggered each day
@@ -9,13 +9,13 @@ on:
       - main
 
 jobs:
-  module3_task0:
-    runs-on: ubuntu-latest
+  module3_task1:
+    runs-on: ubuntu 18.04
     steps:
       - name: checkout the repository
         uses: actions/checkout@v3
       - name: create new workflow
         run: |
           git clone https://github.com/luciel53/holbertonschool-validation.git
-          cd module3_task0
+          cd module3_task1
           make build
