--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   module3_task0:
-    runs-on: ubuntu 18.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout the repository
         uses: actions/checkout@v3
