fix github help

--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -18,4 +18,4 @@ jobs:
         run: |
           git clone https://github.com/luciel53/holbertonschool-validation.git
           cd module3_task0
-          make build
+          make help
