--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -16,27 +16,35 @@ jobs:
         uses: actions/checkout@v3
       # Run the setup.sh to install missing tools
       - name: Setup environment
-        run: bash ./setup.sh
+        run: 
+          cd module3_task1
+          bash ./setup.sh
         
       # To use the makefile
       - name: Build
-        run: make build
+        run: 
+          cd module3_task1
+          make build
         
       - name: Test
-        run: make test
+        run:
+          cd module3_task1
+          make test
         
       - name: Lint
-        run: make lint
+        run: 
+          cd module3_task1
+          make lint
         
       - name: Create post
         env:
           POST_NAME: my-post
           POST_TITLE: My Post
-        run: make post
+        run: 
+          cd module3_task1
+          make post
         
       - name: clean up the dist
-        run: clean
-        
-      
-
-      
+        run: 
+          cd module3_task1
+          clean
