--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -26,7 +26,7 @@ jobs:
           make build
         
       - name: Test
-        run:
+        run: |
           cd module3_task1
           make test
         
