--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -42,3 +42,4 @@ jobs:
         run: |
           cd module3_task1
           make lint
+          yamllint "$(readlink github-workflow.yml)" --no-warnings >/dev/null 2>&1 && echo OK
