--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Lint
         run: |
           cd module3_task1
-          make lint
+          yamllint "$(readlink github-workflow.yml)"
