--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -42,4 +42,4 @@ jobs:
         uses:
           ibiqlik/action-yamllint@v3
         with:
-            file_or_dir: ./.github/workflows/module3_task1.yaml
+            file_or_dir: .github/workflows/module3_task1.yaml
