--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -42,5 +42,5 @@ jobs:
         uses:
           ibiqlik/action-yamllint@v3
         with:
-            file_or_dir: github/workflows/module3_task1.yaml
-concurrency: "{extends: default, rules: {new-line-at-end-of-file: disable}}"
+          file_or_dir: .github/workflows/module3_task1.yaml
+          config_file: .yamllint.yml
