--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -43,4 +43,4 @@ jobs:
           ibiqlik/action-yamllint@v3
         with:
           file_or_dir: .github/workflows/module3_task1.yaml
-          config_file: .yamllint.yml
+          config_file: module3_task1/themes/ananke/config.yaml
