--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -39,4 +39,10 @@ jobs:
           cd module3_task1
           make clean
           
+      - name: yaml-lint
+        uses:
+          ibiqlik/action-yamllint@v3
+        with:
+          file_or_dir: .github/workflows/module3_task1.yaml
+          config_file: .yamllint.yml
       
