update yamllint makefile

--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -11,3 +11,5 @@ post: ## Create a new blog post whose filename and title come from the environme
 help: ## prints out the list of targets and their usage.
 	cat Makefile | grep "##" | tr -d '##'
 
+lint: ## prints the yaml file
+	yamllint "$(readlink github-workflow.yml)" --no-warnings >/dev/null 2>&1 && echo OK
