--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -18,7 +18,8 @@ jobs:
       # Run the setup.sh to install missing tools
       - name: Setup environment
         run:
-          ./module3_task1/setup.sh
+          cd module3_task1/
+          sudo ./setup.sh
 
       # To use the makefile
       - name: Build
