--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
       # Run the setup.sh to install missing tools
       - name: Setup environment
-        run:
+        run: |
           cd module3_task1/
           sudo ./setup.sh
 
