--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -44,3 +44,7 @@ jobs:
         run: |
           cd module3_task2
           make package
+      - name: unit-tests
+        run: |
+          cd module3_task2
+          make unit-tests
