--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -17,5 +17,4 @@ lint: ## prints the yaml file
 package: ## produces a file awesome-website.zip, containing the binary awesome-api and the directory dist/ directory
 	zip -q awesome-website.zip awasome-api dist/
 
-unit-tests: ## Documentation must be up to date according to the new make targets (Makefile and README.md)
-	ERROR: No mention of target unit-tests found in ./README.md
+unit-tests: ## ERROR: No mention of target unit-tests found in ./README.md
