--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -48,3 +48,7 @@ jobs:
         run: |
           cd module3_task2
           make unit-tests
+      - name: integration-tests
+        run: |
+          cd module3_task2
+          make integration-tests
