--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -52,3 +52,7 @@ jobs:
         run: |
           cd module3_task2
           make integration-tests
+      - name: validate
+        run: |
+          cd module3_task2
+          make validate
