--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           cd module3_task2
           make post
-      - name: yaml-lint
+      - name: markdownlint
         run: |
           cd module3_task2
           make lint
