--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -12,7 +12,8 @@ help: ## prints out the list of targets and their usage.
 	cat Makefile | grep "##" | tr -d '##'
 
 lint: ## lint the files README.md and DEPLOY.md with markdownlint command line
-	markdownlint -o README.md DEPLOY.md
+	markdownlint -o README.md
+	markdownlint -o DEPLOY.md
 
 package: ## produces a file awesome-website.zip, containing the binary awesome-api and the directory dist/ directory
 	zip -q awesome-website.zip awasome-api dist/
