--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -56,3 +56,9 @@ jobs:
         run: |
           cd module3_task2
           make validate
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact
+          path: |
+            cd module3_task2
