--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -40,10 +40,6 @@ jobs:
         run: |
           cd module3_task2
           make clean
-      - name: package
-        run: |
-          cd module3_task2
-          make package
       - name: unit-tests
         run: |
           cd module3_task2
@@ -52,14 +48,15 @@ jobs:
         run: |
           cd module3_task2
           make integration-tests
+          make package
       - name: validate
         run: |
           cd module3_task2
           make validate
-      - name: Archive production artifacts
+      - name: archive build
         if: ${{ success()}}
         uses: actions/upload-artifact@v3
         with:
-          name: artifact
+          name: upload-pakage
           path: |
             cd module3_task2/awesome-website.zip
