--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -58,5 +58,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: upload-pakage
-          path: |
-            cd module3_task2/awesome-website.zip
+          path: module3_task2/awesome-website.zip
