--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -63,3 +63,7 @@ jobs:
           path: module3_task3/awesome-website.zip
       - name: Release
         uses: softprops/action-gh-release@v1
+        with:
+          files:
+            /module3_task3/DEPLOY.md
+            /module3_task3/awesome-website.zip
