--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tags:
+          tag_name:
             1.0.0
           files: |
             /module3_task3/DEPLOY.md
