update pull request

--- a/.github/workflows/module3_task4.yml
+++ b/.github/workflows/module3_task4.yml
@@ -8,6 +8,8 @@ on:
     # trigger each push event
     branches:
       - main
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   module3_task4:
