--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -75,7 +75,7 @@ jobs:
           publish-dir: './dist'
           production-branch: master
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
+          deploy-message: "🎉 Published on"
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
