changed deploy message

--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -75,7 +75,7 @@ jobs:
           publish-dir: './dist'
           production-branch: master
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "🎉 Published on"
+          deploy-message: "🎉 Published on 🚀 Deployed on"
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
