--- a/module4_task0/Makefile
+++ b/module4_task0/Makefile
@@ -24,5 +24,6 @@ unit-tests: ## ERROR: No mention of target unit-tests found in ./README.md
 	touch coverage-units.out
 
 integration-tests: ## ERROR: No comment found for target integration-tests in ./Makefile
+	touch coverage-integrations.out
 
 validate: ## ERROR: No comment found for target validate in ./Makefile
